--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lukascivil/treeWalker",
+    "name": "lukascivil/treewalker",
     "description": "TreeWalker is a simple and smal API in php that will help you to work with Objects in php",
     "keywords": ["JSON","objects","diff"],
     "license": "MIT",
