--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "TreeWalker is a simple and smal API in php that will help you to work with Objects in php",
     "keywords": ["JSON","objects","diff"],
     "license": "MIT",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "lucas cordeiro da Silva",
