--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         }
     ],
     "require": {},
+	"require-dev": {
+		"phpunit/phpunit": "^6.2"
+	},
     "autoload": {
         "psr-4": {
             "": "src/"
