--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "mattermack/treewalker",
-    "description": "TreeWalker is a simple and small Library that will help you to work faster with manipulation of structures in PHP.  Minor bug fixes to Lucas' implementation",
+    "name": "lukascivil/treewalker",
+    "description": "TreeWalker is a simple and small Library that will help you to work faster with manipulation of structures in PHP",
     "keywords": ["JSON", "objects", "diff", "merge", "dynamically", "recursivelly", "array", "struct"],
     "license": "MIT",
     "minimum-stability": "stable",
