chore: add unit test

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,11 @@
         "psr-4": {
             "": "src/"
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5"
     }
 }
