--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,3 +17,6 @@ jobs:
 
       - name: Run test suite
         run: composer run-script test
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
