--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Run test suite
         run: composer run-script test
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+      - name: Run codecov
+        run: bash <(curl -s https://codecov.io/bash)
