--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - uses: MilesChou/xdebug-action@master
+      - uses: MilesChou/xdebug-action@1.0.0
 
       - name: Validate composer.json and composer.lock
         run: composer validate
