--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,5 +21,10 @@ jobs:
       - name: Run test suite
         run: composer run-script test
 
-      - name: Run codecov
-        run: bash <(curl -s https://codecov.io/bash)
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+      # - name: Run codecov
+      #   run: bash <(curl -s https://codecov.io/bash)
